--- a/index.html
+++ b/index.html
@@ -1,11 +1,85 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<title>Tern's Blog</title>
+    <meta charset="UTF-8">
+    <title>Space</title>
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 
 <body>
-<h1>Welcome to Tern's Blog</h1>
-<p>Tern's first Blog</p>
+    <header>
+        <div id="logo"><a href="index.html"><img src="images/logo.png" alt=""><div id="logo1">SPACE</div></a></div>
+        <nav>
+            <ul>
+                <li><a href="liuyan.html">留言</a></li>
+                <li><a href="space.html">外太空</a></li>
+                <li><a href="galaxy.html">银河系</a></li>
+                <li><a href="solar.html">太阳系</a></li>
+                <li><a href="earth.html">地球</a></li>
+                <li><a href="index.html">首页</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div id="zy1">
+
+            <h1 id="bt1">当我们再次仰望星空</h1>
+            <h3 id="bt2">渺小如我们，你可以改变自己的命运</h3>
+            <video src="images/universial.Mp4" controls="controls" id="video1"></video>
+            <div id="play-btn">
+                <div id="play-btn1"><a href="#video1"><img src="images/play-btn.png" alt=""></a></div>
+            </div>
+            <div id="downcircle">
+                <a href="#zy2"><img src="images/circle.png" alt=""></a>
+            </div>
+        </div>
+        <div class="gd">
+            <img src="images/status.gif" alt="">
+        </div>
+        <div id="zy2">
+            <h1 id="where">where to go?</h1>
+            <div id="earth">
+                <div id="earth1" class="roate"></div>
+                <h3 class="where"><a href="earth.html">地球</a></h3>
+            </div>
+            <div id="solar">
+            <div id="solar1" class="roate"></div>
+                <h3 class="where"><a href="solar.html">太阳系</a></h3></div>
+            <div id="galaxy">
+            <div id="galaxy1" class="roate"></div>
+                <h3 class="where"><a href="galaxy.html">银河系</a></h3></div>
+            <div id="space">
+            <div id="space1" class="roate"></div>
+                <h3 class="where"><a href="space.html">外太空</a></h3></div>
+        </div>
+        <div class="gd">
+            <img src="images/status.gif" alt="">
+        </div>
+        <div id="zy3">
+           <div id="wz">已知的宇宙</div>
+            <div id="yz"></div>
+            
+        </div>
+        <div class="gd">
+            <img src="images/status.gif" alt="">
+        </div>
+        <div id="connect">
+            <h1>按下面这个按钮联系我</h1>
+            <div id="liuyan"><a href="liuyan.html">留言</a></div>
+        </div>
+
+
+
+    </main>
+    <footer>
+        <div id="footer-logo"><a href="#">
+            <img src="images/footer-logo.png" alt="">
+        </a></div>
+        <div id="xx">江西师范大学 计算机信息工程学院 17级计科一班 杨腾 201726202030 975429539@qq.com 13576683821</div>
+    </footer>
 </body>
 
 </html>
